<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="account_type_cash">Cash</string>
    <string name="account_type_credit">Credit</string>
    <string name="account_type_investments">Investment</string>

    <string name="fragment_account_editor_add_title">Add new account</string>
    <string name="fragment_account_editor_update_title">Update account</string>
    <string name="fragment_account_editor_back">Back</string>
    <string name="fragment_account_editor_delete_title">Delete</string>
    <string name="fragment_account_editor_name_hint">Account Name</string>
    <string name="fragment_account_editor_name_blank_error">Please provide a name</string>
    <string name="fragment_account_editor_institution_hint">Institution (Optional)</string>
    <string name="fragment_account_editor_balance_hint">Balance</string>
    <string name="fragment_account_editor_default_balance_text">0</string>
    <string name="fragment_account_editor_currency_hint">Currency</string>
    <string name="fragment_account_editor_type_label">Account Type</string>
    <string name="fragment_account_editor_info_button_content_description">Account Type Explanation</string>
    <string name="fragment_account_editor_save_button">Save</string>

    <string name="dialog_account_type_title">Type Explanation</string>
    <string name="dialog_account_type_cash_explanation">Chequing, savings, &amp; cash: Basic accounts that offers easy access to your money for day-to-day spending.</string>
    <string name="dialog_account_type_credit_explanation">Credit &amp; loans: Money borrowed which you can repay later, often with interest.</string>
    <string name="dialog_account_type_investments_explanation">Stocks, bonds, &amp; other assets: Money placed in accounts that are mainly used to grow your wealth over time.</string>
</resources>