<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_name_container"
        style="@style/Theme.Budgetify.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_account_editor_margin_horizontal"
        android:layout_marginTop="@dimen/fragment_account_editor_name_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_name"
            style="@style/Theme.Budgetify.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_account_editor_name_hint"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_institution_container"
        style="@style/Theme.Budgetify.TextInputLayout.DropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_account_editor_margin_horizontal"
        android:layout_marginTop="@dimen/fragment_account_editor_margin_between"
        app:endIconMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_name_container">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/account_institution"
            style="@style/Theme.Budgetify.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_account_editor_institution_hint"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_balance_container"
        style="@style/Theme.Budgetify.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_account_editor_margin_horizontal"
        android:layout_marginTop="@dimen/fragment_account_editor_margin_between"
        android:layout_marginEnd="@dimen/fragment_account_editor_balance_margin_end"
        app:layout_constraintEnd_toStartOf="@id/account_currency_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_institution_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_balance"
            style="@style/Theme.Budgetify.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_account_editor_balance_hint"
            android:inputType="numberSigned|numberDecimal"
            android:text="@string/fragment_account_editor_default_balance_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_currency_container"
        style="@style/Theme.Budgetify.TextInputLayout.DropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fragment_account_editor_margin_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/account_balance_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/account_balance_container"
        app:layout_constraintTop_toTopOf="@id/account_balance_container">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/account_currency"
            style="@style/Theme.Budgetify.TextInputEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/fragment_account_editor_currency_hint"
            android:inputType="none|textNoSuggestions"
            android:minWidth="@dimen/fragment_account_editor_currency_min_width"
            tools:text="CAD" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/account_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_account_editor_margin_horizontal"
        android:text="@string/fragment_account_editor_type_label"
        app:layout_constraintBottom_toBottomOf="@id/more_info_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/more_info_button" />

    <ImageView
        android:id="@+id/more_info_button"
        android:layout_width="@dimen/fragment_account_editor_info_button_size"
        android:layout_height="@dimen/fragment_account_editor_info_button_size"
        android:layout_marginStart="@dimen/fragment_account_editor_info_button_margin_start"
        android:layout_marginTop="@dimen/fragment_account_editor_info_button_margin_top"
        android:background="?selectableItemBackgroundCircular"
        android:clickable="true"
        android:contentDescription="@string/fragment_account_editor_info_button_content_description"
        android:padding="@dimen/fragment_account_editor_info_button_padding"
        android:src="@drawable/ic_info"
        app:layout_constraintStart_toEndOf="@id/account_type_label"
        app:layout_constraintTop_toBottomOf="@id/account_balance_container"
        app:tint="?colorControlNormal" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/account_type_toggle_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_account_editor_margin_horizontal"
        android:layout_marginTop="@dimen/fragment_account_editor_type_toggle_group_margin_top"
        android:orientation="horizontal"
        app:checkedButton="@id/cash_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/more_info_button"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/cash_button"
            style="@style/Theme.Budgetify.Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_type_cash" />

        <Button
            android:id="@+id/credit_button"
            style="@style/Theme.Budgetify.Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_type_credit" />

        <Button
            android:id="@+id/investments_button"
            style="@style/Theme.Budgetify.Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_type_investments" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Button
        android:id="@+id/save_button"
        style="@style/Theme.Budgetify.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_account_editor_margin_horizontal"
        android:layout_marginBottom="@dimen/fragment_account_editor_save_button_margin_bottom"
        android:text="@string/fragment_account_editor_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>